--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/index.jsx"></script>
+    <!-- Admin Access: Add ?admin=true to URL to access admin panel -->
   </body>
 </html>
