Remove AdminApp and related admin functionalities; update index.html and manifest.json with new metadata and service worker registration; refactor App component to use AppRouter.

--- a/public/index.html
+++ b/public/index.html
@@ -4,10 +4,27 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>SpeakLife</title>
+    <meta name="description" content="SpeakLife - A spiritual confession and reflection app for daily spiritual practice" />
+    <meta name="theme-color" content="#8B5CF6" />
+    <link rel="manifest" href="/manifest.json" />
+    <title>SpeakLife - Spiritual Confession App</title>
   </head>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/index.js"></script>
+    <script>
+      // Register service worker for push notifications
+      if ('serviceWorker' in navigator) {
+        window.addEventListener('load', () => {
+          navigator.serviceWorker.register('/sw.js')
+            .then((registration) => {
+              console.log('SW registered: ', registration);
+            })
+            .catch((registrationError) => {
+              console.log('SW registration failed: ', registrationError);
+            });
+        });
+      }
+    </script>
   </body>
 </html>
