--- a/public/index.html
+++ b/public/index.html
@@ -2,16 +2,16 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg?v=2" />
-    <link rel="icon" type="image/x-icon" href="/favicon.ico?v=2" />
-    <link rel="shortcut icon" href="/favicon.ico?v=2" />
-    <link rel="apple-touch-icon" href="/logo192.png?v=2" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg?v=3" />
+    <link rel="icon" type="image/x-icon" href="/favicon.ico?v=3" />
+    <link rel="shortcut icon" href="/favicon.ico?v=3" />
+    <link rel="apple-touch-icon" href="/logo192.png?v=3" />
     <meta name="msapplication-TileColor" content="#8B5CF6" />
-    <meta name="msapplication-TileImage" content="/logo192.png?v=2" />
+    <meta name="msapplication-TileImage" content="/logo192.png?v=3" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="SpeakLife - A spiritual confession and reflection app for daily spiritual practice" />
     <meta name="theme-color" content="#8B5CF6" />
-    <link rel="manifest" href="/manifest.json" />
+    <link rel="manifest" href="/manifest.json?v=3" />
     <title>SpeakLife - Spiritual Confession App</title>
   </head>
   <body>
