--- a/public/index.html
+++ b/public/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg?v=3" />
-    <link rel="icon" type="image/x-icon" href="/favicon.ico?v=3" />
-    <link rel="shortcut icon" href="/favicon.ico?v=3" />
+    <link rel="icon" type="image/svg+xml" href="/speaklife-favicon.svg" />
+    <link rel="icon" type="image/x-icon" href="/speaklife-favicon.ico" />
+    <link rel="shortcut icon" href="/speaklife-favicon.ico" />
     <link rel="apple-touch-icon" href="/logo192.png?v=3" />
     <meta name="msapplication-TileColor" content="#8B5CF6" />
     <meta name="msapplication-TileImage" content="/logo192.png?v=3" />
