--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
+    <link rel="icon" type="image/svg+xml" href="/sl-icon.svg" />
+    <link rel="icon" type="image/x-icon" href="/sl-icon.ico" />
+    <link rel="shortcut icon" href="/sl-icon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>SpeakLife</title>
   </head>
