--- a/debug-ai.html
+++ b/debug-ai.html
@@ -36,7 +36,7 @@
                 log(`Window location: ${window.location.href}`, 'info');
                 
                 // Test API key
-                const apiKey = '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';
+                const apiKey = 'YOUR_API_KEY_HERE'; // Replace with your actual API key
                 log(`🔑 API Key: ${apiKey.substring(0, 20)}...`, 'info');
                 
                 // Test OpenRouter API directly
