--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <link rel="icon" type="image/x-icon" href="/sl-icon.ico" />
     <link rel="shortcut icon" href="/sl-icon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
+    <meta http-equiv="Pragma" content="no-cache" />
+    <meta http-equiv="Expires" content="0" />
     <title>SpeakLife</title>
   </head>
   <body>
