--- a/index.html
+++ b/index.html
@@ -2,14 +2,15 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/sl-icon.svg" />
-    <link rel="icon" type="image/x-icon" href="/sl-icon.ico" />
-    <link rel="shortcut icon" href="/sl-icon.ico" />
+    <link rel="icon" type="image/svg+xml" href="/sl-icon.svg?v=3" />
+    <link rel="icon" type="image/x-icon" href="/sl-icon.ico?v=3" />
+    <link rel="shortcut icon" href="/sl-icon.ico?v=3" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
     <meta http-equiv="Pragma" content="no-cache" />
     <meta http-equiv="Expires" content="0" />
-    <title>SpeakLife</title>
+    <title>SpeakLife - v3</title>
+    <script src="/force-reload.js?v=3"></script>
   </head>
   <body>
     <div id="root"></div>
