--- a/index.html
+++ b/index.html
@@ -1,15 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/sl-icon.svg" />
-    <link rel="icon" type="image/x-icon" href="/sl-icon.ico" />
-    <link rel="shortcut icon" href="/sl-icon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>SpeakLife</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/index.jsx"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/svg+xml" href="/sl-icon.svg" />
+  <link rel="icon" type="image/x-icon" href="/sl-icon.ico" />
+  <link rel="shortcut icon" href="/sl-icon.ico" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+  <!-- PWA Meta Tags -->
+  <meta name="theme-color" content="#7c3aed" />
+  <meta name="description"
+    content="Transform your life through daily Bible reading, confessions, and spiritual community" />
+  <link rel="manifest" href="/manifest.json" />
+
+  <!-- Apple Touch Icon -->
+  <link rel="apple-touch-icon" href="/icons/icon-192x192.png" />
+  <meta name="mobile-web-app-capable" content="yes" />
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+  <meta name="apple-mobile-web-app-title" content="SpeakLife" />
+
+  <!-- Microsoft Tiles -->
+  <meta name="msapplication-TileColor" content="#7c3aed" />
+  <meta name="msapplication-TileImage" content="/icons/icon-144x144.png" />
+
+  <title>SpeakLife - Daily Bible & Spiritual Growth</title>
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/index.jsx"></script>
+</body>
+
 </html>
